# pi-rpc

./: .gitignore  AGENTS.md  README.md  deno.json  pyproject.toml
.agents/roles/default/: AGENTS.md  cues.md  role.md  session.md
.agents/roles/docs-packaging/: AGENTS.md  cues.md  role.md  session.md
.agents/roles/git-manager/: AGENTS.md  role.md  session.md
.agents/roles/pi-rpc-protocol/: AGENTS.md  role.md  session.md
.agents/roles/product-cli-designer/: AGENTS.md  role.md  session.md
.agents/roles/python-runtime-engineer/: AGENTS.md  role.md  session.md
.agents/roles/quality-reviewer/: AGENTS.md  role.md  session.md
.agents/roles/release-decider/: AGENTS.md  role.md  session.md
.agents/skills/dictify-usage/: SKILL.md
.agents/tasks/: config.toml
.agents/tasks/2026-06-23-build-pi-rpc/: task.md
.github/workflows/: ci.yml
docs-site/: docusaurus.config.js  package.json  sidebars.js
docs-site/docs/: commands.md  extension-ui.md  intro.md
docs-site/src/css/: custom.css
goal/: main.md
src/pi_rpc/: __init__.py  cli.py  lifecycle.py  models.py  paths.py  session_id.py  status.py
src/pi_rpc/broker/: __init__.py  main.py  metadata.py  pi_process.py  schemas.py  server.py
src/pi_rpc/cli/: __init__.py
src/pi_rpc/cli_commands/: jobs.py  lifecycle.py  prompting.py  session_controls.py  visibility.py
tests/: test_broker_schemas.py  test_broker_server.py  test_cli_interactive_ui.py  test_cli_model_resolution.py  test_cli_payload_controls.py  test_paths.py  test_protocol.py  test_session_id.py  test_stateless_run_and_jobs.py
(+39 files in other folders)
